<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <Button
        android:id="@+id/bottom_check"
        android:text="@string/check"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/bottom_record"
        android:text="@string/record"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/bottom_curriculum"
        android:text="@string/curriculum"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/bottom_mine"
        android:text="@string/mine"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"/>

</LinearLayout>