<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--<Button-->
                    <!--android:id="@+id/help_back"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:layout_width="32dp"-->
                    <!--android:layout_height="32dp"-->
                    <!--android:layout_centerVertical="true"/>-->
                <TextView
                    android:text="@string/phoneNumber"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phoneNumber_E"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/qingshuruniyaobagndingdehaoma"/>

        <Button
            android:id="@+id/phoneNumber_B"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/huoquyanzhengma"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/message_identification_E"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/yanzhengma"/>

        <Button
            android:id="@+id/message_identification_B"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/fasong"/>
    </LinearLayout>


</LinearLayout>