<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/portrait"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/me"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/portrait"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/login_id"
            android:hint="@string/hintId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/login_toRegister"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/goToRegister" />

            <Button
                android:id="@+id/login_button"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>




        </LinearLayout>

    </LinearLayout>

</RelativeLayout>