<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/liner_cir"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/teacher"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_cir"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mine_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_below="@id/mine_name"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/teaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/mine_sexuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/man"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneNumberL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/liner_detail">

        <TextView
            android:text="@string/phoneNumber"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            android:id="@+id/phoneNumber"
            android:gravity="right"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberL"
        android:layout_marginTop="40dp">
        <TextView
            android:text="@string/email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/email"
            android:gravity="right"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings"
        android:text="@string/setting"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailL"
        android:layout_marginTop="40dp" />

</RelativeLayout>